@@ -438,7 +438,6 @@ $1',
 'loadhist'              => 'Се вчитува историјата за страницата',
 'currentrev'            => 'Тековна верзија',
 'revisionasof'          => 'Верзија од $1',
-'oldrevisionnavigation' => 'Ревизии од $1; $5<br />($6) $3 | $2 | $4 ($7)',
 'previousrevision'      => '←Претходна ревизија',
 'nextrevision'          => 'Следна верзија→',
 'currentrevisionlink'   => 'видете ја тековната верзија',
